# bang

./: .gitignore  .travis.yml  Bang.cabal  ChangeLog.md  LICENSE  README.md
cli/: Main.hs
repl/: Main.hs
src/Language/Bang/: Compiler.hs  Lexer.x  Parser.y
src/Language/Bang/Types/: Error.hs  SrcPos.hs
tests/: Main.hs
tests/good/: functions.bng
